feat: update registration path, add config type
